# polynomial_nttp

./: .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  README.md  VERSION  conanfile.py  config.cppm.in  polynomial_nttp_config.cppm.in
.github/workflows/: cmake-multi-platform.yml
benchmarks/: CMakeLists.txt  benchmark_addition_crossover.cpp  benchmark_compile_time.cpp  benchmark_complex_speed.cpp  benchmark_ct_div.cpp  benchmark_ct_fft.cpp  benchmark_ct_gcd.cpp  benchmark_ct_naive.cpp  benchmark_ct_sunspots.cpp  benchmark_multiplication_crossover.cpp  benchmark_ntt_pure.cpp  benchmark_ntt_vector_vs_array.cpp  benchmark_ntt_vs_naive.cpp  benchmark_ntt_vs_ntl.cpp  benchmark_operator_speed.cpp  benchmark_parallel_ntt.cpp  benchmark_threading_crossover.cpp  bulk_benchmark.cpp  eval_benchmark.cpp  ntl_benchmark_impl.cpp  trig_benchmark.cpp
cmake/: BlasSetup.cmake  LamConstexprLimit.cmake  LamFeatureDetect.cmake  LamModule.cmake  PolynomialHelpers.cmake  Sanitizers.cmake
examples/: CMakeLists.txt  audio_filtering_demo.cpp  embed_wav_demo.cpp  eval_benchmark.cpp  root_finding_demo.cpp  trig_benchmark.cpp  type_erased.cpp
examples/compatibility/: ctbignum_compat.cpp  roots_brute_force.cpp
examples/data/: sunspot_data.hpp  sunspot_data_raw.txt
examples/orthogonal/: chebyshev.cpp  gegenbauer.cpp  hermite.cpp  jacobi.cpp  laguerre.cpp  legendre.cpp
src/: polynomial_nttp-univariate-acceleration.cppm  polynomial_nttp-univariate-algebra.cppm  polynomial_nttp-univariate-berlekamp.cppm  polynomial_nttp-univariate-compatibility.cppm  polynomial_nttp-univariate-fft.cpp  polynomial_nttp-univariate-fft.cppm  polynomial_nttp-univariate-finite-field.cppm  polynomial_nttp-univariate-interpolation.cppm  polynomial_nttp-univariate-math.cppm  polynomial_nttp-univariate-ntt.cppm  polynomial_nttp-univariate-print.cppm  polynomial_nttp-univariate-roots.cppm  polynomial_nttp-univariate-structure.cppm  polynomial_nttp-univariate.cppm  polynomial_nttp.cpp  polynomial_nttp.cppm
src/experimental/: concepts.cppm
src/original_module_file/: polynomial_nttp.cpp  polynomial_nttp.cppm
tests/: CMakeLists.txt  test_poly_nttp_mod.cpp  test_polynomial_acceleration.cpp  test_polynomial_nttp.cpp  thousand_divisions.cpp  thousand_divisions0.remainder
tests/manual/: check_ntt_logic.cpp
tests/stress/: CMakeLists.txt  cyclotomic.cpp  lagrange.cpp  mignotte.cpp  thousand_divisions.cpp  wilkinson.cpp
tests/unit/: CMakeLists.txt  antiderivative.cpp  array_cast_constructor.cpp  berlekamp.cpp  binary_add_polynomial_with_constant.cpp  binary_add_polynomials.cpp  binary_multiply_polynomial_with_constant.cpp  binary_multiply_polynomials.cpp  binary_subtract_polynomial_with_constant.cpp  binary_subtract_polynomials.cpp  concepts_check.cpp  constant_cast_constructor.cpp  constructor.cpp  coverage_gap_fillers.cpp  derivative.cpp  division.cpp  division_complex.cpp  init_list_constructor.cpp  iterators.cpp  leading_coefficient.cpp  make_monomial.cpp  norm.cpp  ntt_array_test.cpp  ntt_constexpr_test.cpp  ntt_properties.cpp  parentheses_operator.cpp  roots_finite_field.cpp  subscript_operator.cpp  unary_negate_operator.cpp
tests/unit/algebra/: antiderivative.cpp  binary_add_polynomial_with_constant.cpp  binary_add_polynomials.cpp  binary_multiply_polynomial_with_constant.cpp  binary_multiply_polynomials.cpp  binary_subtract_polynomial_with_constant.cpp  binary_subtract_polynomials.cpp  derivative.cpp  division.cpp  division_complex.cpp  leading_coefficient.cpp  make_monomial.cpp  norm.cpp  poly_rem.cpp
tests/unit/berlekamp/: berlekamp.cpp
tests/unit/concepts/: concepts_check.cpp
tests/unit/fft/: binary_multiply_fft.cpp  ct_fft_benchmark.cpp  precision_benchmark.cpp  real_world_signal_fft.cpp
tests/unit/interpolation/: lagrange_test.cpp
tests/unit/roots/: roots.cpp
tests/unit/structure/: array_cast_constructor.cpp  constant_cast_constructor.cpp  constructor.cpp  init_list_constructor.cpp  iterators.cpp  parentheses_operator.cpp  subscript_operator.cpp  unary_negate_operator.cpp
